--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "scripts": {
     "distribute": "yarn build-ts && node dist/app.js",
-    "dev": "tsc-watch --skipLibCheck --onSuccess 'node dist/app.js'",
+    "develop": "tsc-watch --skipLibCheck --onSuccess 'node dist/app.js'",
     "build-ts": "tsc --skipLibCheck",
     "pretty": "prettier --check src",
     "lint": "yarn pretty && eslint --max-warnings 0 --ext ts,tsx,json src"
@@ -27,8 +27,6 @@
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
-    "@typegoose/typegoose": "^9.3.1",
-    "@types/js-yaml": "^4.0.5",
     "@types/node": "^16.11.12",
     "@types/sequelize": "^4.28.10",
     "@types/validator": "^13.7.0",
