--- a/package.json
+++ b/package.json
@@ -21,14 +21,20 @@
     "envalid": "^7.2.2",
     "grammy": "^1.5.0",
     "grammy-middlewares": "^1.0.11",
+    "js-yaml": "^4.1.0",
+    "lodash": "^4.17.21",
     "mysql2": "^2.3.0",
+    "reflect-metadata": "^0.1.13",
     "sequelize": "^6.6.5",
-    "sequelize-typescript": "^2.1.0",
-    "reflect-metadata": "^0.1.13"
+    "sequelize-typescript": "^2.1.0"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
+    "@types/js-yaml": "^4.0.5",
+    "@types/lodash": "^4.14.195",
     "@types/node": "^16.11.12",
     "@types/sequelize": "^4.28.10",
+    "@types/source-map-support": "^0.5.4",
     "@types/validator": "^13.7.0",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
@@ -43,9 +49,7 @@
     "prettier": "^2.5.1",
     "source-map-support": "^0.5.21",
     "tsc-watch": "^4.5.0",
-    "typescript": "^4.5.2",
-    "@types/dotenv": "^8.2.0",
-    "@types/source-map-support": "^0.5.4"
+    "typescript": "^4.9.5"
   },
   "_moduleAliases": {
     "@": "dist"
